# translens

./: .gitignore  DEVELOPMENT_LOG.md  README.md  index.html  overlay.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.pilotdeck/plans/: fix-startup-performance.md
src/: App.svelte  app.css  overlay-main.ts  settings-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/detection/: mod.rs  stub.rs  uia_hook.rs  win.rs
src-tauri/src/overlay/: mod.rs  stub.rs  win.rs
src-tauri/src/translator/: deepseek.rs
src/lib/: OverlayButton.svelte  SettingsPage.svelte
