[package]
name = "translens"
version = "0.1.0"
edition = "2021"

[lib]
name = "translens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
    "devtools",
] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Stub/no-ops on Linux
